wrap up ch3, first version of the course is content-complete (without demos)

--- a/modules/ch3-multitenancy/pages/s1-domains-projects-lecture.adoc
+++ b/modules/ch3-multitenancy/pages/s1-domains-projects-lecture.adoc
@@ -4,7 +4,7 @@ Objective::
 
 Describe how to organize OpenStack resources in projects and domains for access control and quota management.
 
-WARNING: Work in Progress
+WARNING: Pending Review.
 
 == Multitenancy with OpenStack
 
