--- a/modules/ch3-multitenancy/pages/s2-multitenancy-quiz.adoc
+++ b/modules/ch3-multitenancy/pages/s2-multitenancy-quiz.adoc
@@ -4,7 +4,7 @@ Objective::
 
 Assess the learner understanding of OpenStack multi-tenancy mechanisms.
 
-WARNING: Work in Progress
+WARNING: Pending Review.
 
 == Questions
 
