--- a/modules/ch3-multitenancy/pages/s4-topology-quiz.adoc
+++ b/modules/ch3-multitenancy/pages/s4-topology-quiz.adoc
@@ -4,7 +4,7 @@ Objective::
 
 Assess the learner understanding of OpenStack cluster topology mechanisms.
 
-WARNING: Work in Progress
+WARNING: Pending Review.
 
 == Questions
 
