Include "Red Hat" in product names

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -3,7 +3,7 @@
 
 WARNING: Work in Progress
 
-== Introduction to OpenStack Services on OpenShift
+== Introduction to Red Hat OpenStack Services on OpenShift
 
 This is the first course for *IT professionals* who are new to Red Hat OpenStack Services on OpenShift. It requires no previous experience with OpenStack, but it requires some familiarity with Linux system administration and virtual machine management.
 
