--- a/modules/ch2-services/pages/s2-fundamental-quiz-answers.adoc
+++ b/modules/ch2-services/pages/s2-fundamental-quiz-answers.adoc
@@ -4,7 +4,7 @@ WARNING: Pending Review
 
 == OpenStack Services and Application Workloads
 
-1. Which of the following OpenStack services are required by a standalone application, which you will install inside a VM only because it is incompatible with your personal workstation, and you need for only a short period of time?
+1. Which of the following OpenStack services are required by a standalone application, which you will install inside a VM only because it is incompatible with your personal workstation, and you need it for only a short period of time?
 
 * [ ] Identity (Keystone) +
 _Incorrect: The applicaiton and its VM do not need to authenticate to nor discover OpenStack services. Only you (the Operator) user has this need._
