--- a/modules/ch2-services/pages/s2-fundamental-quiz.adoc
+++ b/modules/ch2-services/pages/s2-fundamental-quiz.adoc
@@ -8,7 +8,7 @@ WARNING: Pending Review
 
 == Questions
 
-1. Which of the following OpenStack services are required by a standalone application, which you will install inside a VM only because it is incompatible with your personal workstation, and you need for only a short period of time?
+1. Which of the following OpenStack services are required by a standalone application, which you will install inside a VM only because it is incompatible with your personal workstation, and you need it for only a short period of time?
 
 * [ ] Identity (Keystone)
 * [ ] Compute (Nova)
