--- a/modules/ch2-services/pages/s6-administration-quiz-answers.adoc
+++ b/modules/ch2-services/pages/s6-administration-quiz-answers.adoc
@@ -32,7 +32,7 @@ _Incorrect: There are no requirements for running applications on physical machi
 * [x] *Metering (Ceilometer)* +
 _Correct: Ceilometer is the source for instantaneous performance data._
 
-3. Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing phisical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?
+3. Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?
 
 * [ ] Identity (Keystone) +
 _Incorrect: The requirements are not about authentication nor service discovery._
