--- a/modules/ch2-services/pages/s6-administration-quiz.adoc
+++ b/modules/ch2-services/pages/s6-administration-quiz.adoc
@@ -22,7 +22,7 @@ WARNING: Pending Review
 * [ ] Bare Metal Provisioning (Ironic)
 * [ ] Metering (Ceilometer)
 
-3. Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing phisical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?
+3. Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?
 
 * [ ] Identity (Keystone)
 * [ ] Dashboard (Horizon)
