--- a/modules/ch2-services/pages/s8-review-quiz.adoc
+++ b/modules/ch2-services/pages/s8-review-quiz.adoc
@@ -55,7 +55,7 @@ WARNING: Pending review.
 * [ ] True
 * [ ] False
 
-10. True or False: Plamement and Ceilomer may seem to be related, because both track the usage of compute capacity by applications on OpenStack clusters, they are actually unrelated and provide different data: Placement is about static usage of resources, like how many virtual CPUs are available for creating more server instances, while Ceilometer is about dynamic usage of resources, like how much CPU is in use right now with multiple simultaneous end-users accessing applications.
+10. True or False: Plamement and Ceilomer may seem to be related, because both track the usage of compute capacity by applications on OpenStack clusters, however, they are actually unrelated and provide different data: Placement is about static usage of resources, like how many virtual CPUs are available for creating more server instances, while Ceilometer is about dynamic usage of resources, like how much CPU is in use right now with multiple simultaneous end-users accessing applications.
 
 * [ ] True
 * [ ] False
