--- a/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
+++ b/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
@@ -44,10 +44,8 @@ Beyond that, Red Hat is commited to fixing bugs and addressing security vulnerab
 
 On the other side, OpenStack alone is not sufficient to create a private cloud: you have to include and integrate additional components such as an hypervisor, a host operating system, and infrastructure to manage the deployment and high-availability of OpenStack services themselves, such as a clustering middleware.
 
-image::s1-rhoso-lecture-fig-1.png[]
+image::s1-rhoso-lecture-fig-1.svg[]
 // slide #1 from https://docs.google.com/presentation/d/1lPtAxaKH9P2SjgexIwBi5RxHOjIUQV44R5c4nnrug74/edit#slide=id.p
-// SVG figures are not displaying... why?
-//image::s1-rhoso-lecture-fig-1.svg[]
 
 // Can we make the name of the diagram visible to the learners?
 
@@ -58,7 +56,7 @@ To provide a complete private cloud platform, Red Hat OpenStack on OpenShift inc
 * The https://www.redhat.com/en/technologies/cloud-computing/openshift[*Red Hat OpenShift*] application platform and its container-optimized operating system https://access.redhat.com/documentation/en-us/openshift_container_platform/4.14/html/architecture/architecture-rhcos[Red Hat Enterprise Linux CoreOS (RHCOS)].
 * The https://www.ovn.org/en/[*Open Virtual Network (OVN)*] software-defined network layer.
 
-image::s1-rhoso-lecture-fig-2.png[]
+image::s1-rhoso-lecture-fig-2.svg[]
 // slide #2 from https://docs.google.com/presentation/d/1lPtAxaKH9P2SjgexIwBi5RxHOjIUQV44R5c4nnrug74/edit#slide=id.p
 
 You could install community OpenStack on any Linux operating system distribution and use different hypervisors. You could use operating-system tools such as pacemaker and podman to manage OpenStack services themselves, and choose different software-defiend networking layers. But you would be responsible for integrating, patching, and adressing any compatibility issues between those components and OpenStack services. By using Red Hat OpenStack Services on OpenShift, you offload all that work to Red Hat.
@@ -76,7 +74,7 @@ An OpenStack cluster is composed of two parts:
 1. A _control plane_ which runs the user-facing and internal infrastructure services of OpenStack.
 2. A _data plane_ which runs the application workloads as VMs.
 
-image::s1-rhoso-lecture-fig-3.png[]
+image::s1-rhoso-lecture-fig-3.svg[]
 // slide #3 from https://docs.google.com/presentation/d/1lPtAxaKH9P2SjgexIwBi5RxHOjIUQV44R5c4nnrug74/edit#slide=id.p
 // Can we give a name to this image?
 
