--- a/modules/ch3-multitenancy/pages/s7-summary.adoc
+++ b/modules/ch3-multitenancy/pages/s7-summary.adoc
@@ -6,7 +6,7 @@ In this chapter, you learned:
 
 * Domains can refer to external identity systems, and users from one domain can access projects from other domains.
 
-* OpenStack users and grops are assigned roles which grant them permissions to manage API resources in a project.
+* OpenStack users and groups are assigned roles which grant them permissions to manage API resources in a project.
 
 * Projects can also be assigned API resource quotas and compute resource quotas, to prevent workloads from one project from using all capacity of their cluster.
 
@@ -16,5 +16,5 @@ In this chapter, you learned:
 
 * OpenStack compute nodes can be members of multiple host aggregates to schedule workloads to physical servers having better performance or cost for each workload.
 
-* OpenStack compute nodes can also be partitioned on cells, independent of AZs and host aggregates, to manage scalability and resilience of OpenStack services themselves.
+* OpenStack compute nodes can also be partitioned in cells, independent of AZs and host aggregates, to manage scalability and resilience of OpenStack services themselves.
 
