--- a/modules/ch3-multitenancy/pages/s2-multitenancy-quiz-answers.adoc
+++ b/modules/ch3-multitenancy/pages/s2-multitenancy-quiz-answers.adoc
@@ -44,7 +44,7 @@ _Incorrect: Member does not allow granting permissions to junior operators form 
 * [ ] View role in the domain which represents that business unit +
 _Incorrect: View does not allow granting permissions to junior operators form the team._
 
-3. An OpenStack Administrator needs to support, on the same cluster, two business units which used to have authonomy on technology decisions and ended up implementing each their own enterprise authentication system. OpenStack Operators from each of those business units need to manage their own applications and use authentication credentials managed by their respective enterprise authentication systems. How can OpenStack support this requirement?
+3. An OpenStack Administrator needs to support, on the same cluster, two business units which used to have autonomy on technology decisions and ended up implementing each their own enterprise authentication system. OpenStack Operators from each of those business units need to manage their own applications and use authentication credentials managed by their respective enterprise authentication systems. How can OpenStack support this requirement?
 
 * [x] *Each business unit belongs to a different domain, and each domain connects to the business unit's enterprise authentication system.* +
 _Correct: authentication domains enable configuring a cluster for different enterprise authentication backends in parallel._
