--- a/modules/ch3-multitenancy/pages/s6-review-quiz.adoc
+++ b/modules/ch3-multitenancy/pages/s6-review-quiz.adoc
@@ -2,7 +2,7 @@
 
 Objective::
 
-Assess the learner understanding of OpenStack multi-tenancy and topology mechanisms.
+Assess the learner's understanding of OpenStack multi-tenancy and topology mechanisms.
 
 WARNING: Pending Review.
 
@@ -12,7 +12,7 @@ WARNING: Pending Review.
 
 == Questions
 
-1. An OpenStack Administrator needs to support, on the same cluster, two business units which used to be independent companies, before a merger, and must continue using each their legacy enterprise authentication system and each have their own team of OpenStack Operators. How can OpenStack support this requirement?
+1. An OpenStack Administrator needs to support, on the same cluster, two business units which used to be independent companies, before a merger, and must continue using each of their legacy enterprise authentication system and each have their own team of OpenStack Operators. How can OpenStack support this requirement?
 
 * [ ] Each business unit requires their own domain.
 * [ ] Each business unit requires their own projects.
@@ -22,7 +22,7 @@ WARNING: Pending Review.
 * [ ] Each business unit requires their own host aggregate.
 * [ ] Each business unit requires their own cell.
 
-2. An OpenStack Operator needs to configure a multi-instance workload to be resilient against physical failures of network switches and uninterrupted power supplies (UPS) which are dedicated to a server rack. The data center was designed with multiple server racks, and each rack as its dedicated network switch and UPS devices. Assuming that an Administrator already configured the proper tenancy or topology mechanism, how would the operator configure its workloads?
+2. An OpenStack Operator needs to configure a multi-instance workload to be resilient against physical failures of network switches and uninterrupted power supplies (UPS) which are dedicated to a server rack. The data center was designed with multiple server racks, and each rack has its dedicated network switch and UPS devices. Assuming that an Administrator already configured the proper tenancy or topology mechanism, how would the operator configure its workloads?
 
 * [ ] By spreading server instances over multiple domains.
 * [ ] By spreading server instances over multiple projects.
@@ -32,7 +32,7 @@ WARNING: Pending Review.
 * [ ] By spreading server instances over multiple host aggregates.
 * [ ] By spreading server instances over multiple cells.
 
-3. An OpenStack Operator has the member role in a project and found the team of developers working on that project is very knowleadgeable about OpenStack and wishes to allow the team more authonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?
+3. An OpenStack Operator has the member role in a project and found that the team of developers working on that project is very knowleadgeable about OpenStack and wishes to allow the team more authonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?
 
 * [ ] Yes
 * [ ] No
