reading time for ch1

--- a/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
+++ b/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 10
+
 = What is Red Hat OpenStack Services on OpenShift
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
