--- a/modules/ch1-intro/pages/s2-components-quiz.adoc
+++ b/modules/ch1-intro/pages/s2-components-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 2
+
 = Quiz: Components of Red Hat OpenStack on OpenShift
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
