--- a/modules/ch1-intro/pages/s3-operations-lecture.adoc
+++ b/modules/ch1-intro/pages/s3-operations-lecture.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 8
+
 =  OpenStack Operations and Administration Roles
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
