--- a/modules/ch1-intro/pages/s4-tasks-quiz.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 3
+
 = Quiz: Red Hat OpenStack Operations Tasks
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
