--- a/modules/ch1-intro/pages/s7-review-quiz-answers.adoc
+++ b/modules/ch1-intro/pages/s7-review-quiz-answers.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 5
+
 = Answers to the Review Quiz
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 WARNING: Pending review.
 
