--- a/modules/ch1-intro/pages/s7-review-quiz.adoc
+++ b/modules/ch1-intro/pages/s7-review-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 1
+
 = Review Quiz: Red Hat OpenStack Operations
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
